# Qiner

./: CMakeLists.txt  Qiner.cpp  Qiner.vcxproj  Qiner.vcxproj.filters  README.md
src/: Constants.h  CustomMining.h  CustomTask.h  Dispatcher.cpp  Dispatcher.h  Network.h  PoolOperator.cpp  PoolOperator.h  Qiner.cpp  RelayMessage.h  RequestResponseHeader.h  Utils.h  score_addition.h  score_common.h  score_hyperidentity.h
test/: score_addition_test.cpp
tools/: CMakeLists.txt  score_params.h  score_test_generator.cpp
